# tz-canary

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  cicd.yml
docs/data/: example_data.csv  generate_example_data.py
docs/examples/: example_infer.py  example_many.py  example_validate.py
tests/: conftest.py  infer_test.py  test_infer.py  test_validate.py
tests/fixtures/: dt_index_fixtures.py  transition_fixtures.py
tz_canary/: __init__.py  detect.py  exceptions.py  infer.py  transitions_data.py  validate.py
