[tool.poetry]
name = "tz-canary"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tz_canary"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
pytz = "~2023.3"  # pinned because we rely on protected properties


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
