[tool.poetry]
name = "tz-canary"
version = "0.1.2"
description = "Infer plausible time zones for a time series dataset based on Daylight Savings Time switches"
authors = ["Leon Overweel <l.overweel@gmail.com>"]
readme = "README.md"
repository = "https://github.com/leonoverweel/tz-canary"
packages = [{include = "tz_canary"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
pytz = "~2023.3"  # pinned because we rely on protected properties


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
